projects/elements/src/card/card.css
:host {
  --nve-sys-interaction-background: var(--nve-sys-interaction-background-200);
  --nve-sys-interaction-field-background: var(--nve-sys-interaction-background-200);
  --background: var(--nve-sys-layer-container-background);
  --color: var(--nve-sys-layer-canvas-color);
  --border-radius: var(--nve-ref-border-radius-lg);
  --box-shadow: var(--nve-ref-shadow-100);
  --border-bottom: none;
  border-radius: var(--border-radius);
  box-shadow: var(--box-shadow);
  border-bottom: var(--border-bottom);
  background: var(--background);
  color: var(--color);
  display: flex;
  flex-direction: column;
  align-items: stretch;
  justify-content: start;
  overflow: hidden;
  contain: none;
}

[internal-host] {
  display: flex;
  flex-direction: column;
  align-items: stretch;
  justify-content: start;
  height: 100%;
}

:host([container='fill']), /* @deprecated 'fill' */
:host([container='full']) {
  --border-bottom: var(--nve-ref-border-width-sm) solid var(--nve-ref-border-color-muted);
  --border-radius: 0;
}

